hphp/hack/test/typecheck/static_polymorphism_undefined.php.exp
File "static_polymorphism_undefined.php", line 4, characters 3-4:
Variable $a is undefined, or there exists at least one control flow path reaching this point which does not define $a. (Naming[2050])
