hphp/hack/test/typecheck/static_polymorphism_undefined.php
<?hh // partial

function f() {
  $a::foo();
}
